<resources>
    <string name="app_name">Easyplans</string>
    <string name="name">Name</string>
    <string name="members">Members</string>
    <string name="photos">Photos</string>
    <string name="activities">Activities</string>
    <string name="add_member">Add Member</string>
    <string name="submit">Submit</string>
    <string name="add_activity">Add Activity</string>
    <string name="date">Date</string>
    <string name="done">done</string>
    <string name="edit_Members">Edit Members</string>
    <string name="paid_by">Paid By</string>
    <string name="cost">Cost</string>
    <string name="billamount">Bill Amount</string>
    <string name="settlements">Settlements</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="activity_settings">Settings</string>
    <string name="not_set">not set</string>
    <string name="username_key">username</string>
    <string name="user_contact_number_key">contact_no</string>
    <string name="contact_no">Mobile</string>
    <string name="user_member_id_key">user_id</string>
    <string name="save">Save</string>
    <string name="title_activity_editmembers">editmembers</string>
    <string name="delete">Delete</string>
    <string name="reset">Reset</string>
    <string name="amount_paid">Amount paid</string>
    <string name="bill">BILL</string>
    <string name="balance">Balance</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="success">Success</string>
    <string name="plan_deleted">Plan Deleted</string>
    <string name="activity_deleted">Activity Deleted</string>
    <string name="members_added">No. Of Members : </string>
    <string name="edit">Edit</string>
    <string name="edit_activity">Edit Activity</string>
    <string name="paid">Paid</string>
    <string name="cost_per_member">Cost per member</string>
    <string name="cost_rs">Cost(Rs.)</string>
    <string name="add_photo">Add Photo</string>
    <string name="add_image">Add image</string>
</resources>
