<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hp.easyplans.addactivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/add_activity_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="25sp"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="34dp" />

    <EditText
        android:id="@+id/add_activity_name_text"
        android:layout_width="221dp"
        android:layout_height="47dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginStart="27dp"
        app:layout_constraintLeft_toRightOf="@+id/add_activity_name"
        android:layout_marginLeft="27dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.703" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/members"
        android:textSize="25sp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/add_activity_name"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/add_activity_name" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_Members"
        android:onClick="editmembersclicked"
        app:layout_constraintLeft_toRightOf="@+id/textView3"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="11dp"
        app:layout_constraintTop_toBottomOf="@+id/add_activity_name_text"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.184" />

    <Button
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paid_by"
        android:onClick="paidbyclicked"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/add_activity_member_list"
        app:layout_constraintLeft_toRightOf="@+id/add_activity_bill_amount"
        android:layout_marginLeft="49dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:onClick="submitclicked"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.882"
        android:layout_marginTop="17dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bill"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="@+id/add_activity_name"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/add_activity_member_list" />

    <TextView
        android:id="@+id/add_activity_bill_amount"
        android:layout_width="172dp"
        android:layout_height="62dp"
        android:ems="10"
        android:inputType="number"
        android:layout_marginRight="262dp"
        app:layout_constraintRight_toRightOf="parent"
        android:text="Rs. 0"
        android:gravity="center_vertical"
        android:textSize="25sp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.086"
        android:layout_marginTop="9dp"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ListView
        android:id="@+id/add_activity_member_list"
        android:layout_width="0dp"
        android:layout_height="224dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"></ListView>

</android.support.constraint.ConstraintLayout>
