<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/settlements_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settlements"
        android:textSize="35sp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintHorizontal_bias="0.044" />


    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/members"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/settlements_heading" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paid"
        android:textSize="25sp"
        app:layout_constraintLeft_toRightOf="@+id/textView11"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/settlements_heading" />

    <ListView
        android:id="@+id/settlements_list_view"
        android:layout_width="0dp"
        android:layout_height="347dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="7dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        tools:layout_editor_absoluteX="17dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="223dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/cost_per_member"
        android:textColor="?attr/actionModeSplitBackground"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="@+id/settlements_heading"
        app:layout_constraintTop_toBottomOf="@+id/settlements_list_view" />

    <TextView
        android:id="@+id/activity_dets_settlements_cost"
        android:layout_width="122dp"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="10dp"
        android:text="TextView"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="?attr/actionModeSplitBackground"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintLeft_toRightOf="@+id/textView12"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settlements_list_view"
        tools:layout_editor_absoluteX="242dp" />
</android.support.constraint.ConstraintLayout>