<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp"
    style="@style/parentcontainer">


    <TextView
        android:id="@+id/activity_dets_name"
        android:layout_width="334dp"
        android:layout_height="70dp"
        android:gravity="center_vertical"
        android:text="Activity name"
        style="@style/textviews"
        android:textSize="25sp"
        android:paddingLeft="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.404" />

    <TextView
        android:id="@+id/activity_dets_plan_members"
        android:layout_width="335dp"
        android:layout_height="97dp"
        android:layout_column="0"
        android:layout_row="1"
        style="@style/textviews"
        android:gravity="center"
        android:onClick="members_clicked"
        android:text="@string/members"
        android:textSize="25sp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/activity_dets_name"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/activity_dets_photos"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/activity_dets_name" />

    <TextView
        android:id="@+id/activity_dets_photos"
        android:layout_width="162dp"
        android:layout_height="100dp"
        android:onClick="photos_clicked"
        android:gravity="center"
        android:text="@string/photos"
        android:textSize="25sp"
        style="@style/textviews"
        app:layout_constraintLeft_toRightOf="@+id/activity_dets_cost_title"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/activity_dets_name"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/activity_dets_name"
        app:layout_constraintHorizontal_bias="0.411" />

    <TextView
        android:id="@+id/activity_dets_cost_title"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_column="0"
        android:layout_row="3"
        android:gravity="center"
        android:text="@string/cost"
        android:textSize="25sp"
        style="@style/textviews"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/activity_dets_name"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/activity_dets_name"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />
    <TextView
        android:id="@+id/activity_dets_cost_amount"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:textSize="25sp"
        android:text="0"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/activity_dets_name"
        style="@style/textviews"
        app:layout_constraintRight_toLeftOf="@+id/activity_dets_photos"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/activity_dets_cost_title" />

    <TextView
        android:id="@+id/activity_dets_settlements"
        android:layout_width="335dp"
        android:layout_height="90dp"
        android:layout_column="0"
        android:layout_row="4"
        android:gravity="center"
        android:text="@string/settlements"
        android:textSize="25sp"
        android:onClick="settlements_clicked"
        android:layout_marginLeft="0dp"
        style="@style/textviews"
        app:layout_constraintLeft_toLeftOf="@+id/activity_dets_name"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/activity_dets_plan_members"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/activity_dets_name"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/activity_dets_edit_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_activity"
        android:onClick="edit_activity_clicked"
        android:layout_marginStart="230dp"
        android:layout_marginLeft="228dp"
        android:elevation="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="23dp"
        app:layout_constraintTop_toBottomOf="@+id/activity_dets_settlements" />




</android.support.constraint.ConstraintLayout>